# Ranged-sets

./: CHANGES.txt  INSTALL.txt  README.txt  Ranged-sets.cabal  Setup.hs  TODO.txt  stack.yaml
Data/: Ranged.hs
Data/Ranged/: Boundaries.hs  RangedSet.hs  Ranges.hs
tests/: Main.hs  Makefile
