Name:           Ranged-sets
Version:        0.0.3
License:        BSD3
License-file:   LICENSE.txt
Copyright:      Paul Johnson, 2005.
Author:         Paul Johnson
Homepage:       http://ranged-sets.sourceforge.net/
Maintainer:     paul@cogito.org.uk
Stability:      alpha
Category:       Testing 
Build-Depends:  base
Synopsis:       Ranged sets for Haskell
Description:	A ranged set is an ordered list of ranges.  This allows sets such as
                all reals x such that (0.25 < x <= 0.75 or 1.4 <= x < 2.3 or 4.5 < x).
Exposed-modules:
        Data.Ranged, Data.Ranged.Boundaries, Data.Ranged.Ranges, Data.Ranged.RangedSet
Extra-source-files: README.txt CHANGES.txt INSTALL.txt TODO.txt
